[package]
name = "Connie"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
strip = "debuginfo"

[profile.client]
inherits = "release"
opt-level = "s"

[workspace]
resolver = "1"
members = [
  "common_lib",
  "lib_db",
  "lib_start",
  "tcp",
]

[dependencies]
tokio = "1.40.0"
tcp = { path = "./tcp/" }
lib_db = { path = "./lib_db/" }
lib_start = { path = "./lib_start/" }
common_lib = { path = "./common_lib/" }

clap = { version = "4.5.27", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
rpassword = "7.3.1"
gethostname = "1.0.0"
sysinfo = "0.33.1"
