[package]
name = "data_base"
version = "0.1.0"
edition = "2021"

[dependencies]
sqlite = "0.36.1"
serde = "1.0.204"
surrealdb = { version = "1.5.5", features = ["kv-rocksdb", "kv-mem", "sql2"] }
tokio = "1.39.2"
once_cell = "1.19.0"
log = "0.4.22"
uuid = "1.10.0"
lazy_static = "1.5.0"
directories = "5.0.1"
