[package]
name = "common_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
local-ip-addr = "0.1.1"
public-ip = "0.2.2"
bincode = "1.3.3"
rand = "0.9.0"
log = "0.4.25"
clap = { version = "4.5.27", features = ["derive"] }
tokio = { version = "1.43.0", features = ["macros", "net", "fs", "rt-multi-thread"] }
serde = { version = "1.0.217", features = ["derive"] }
toml = "0.8.19"
rpassword = "7.3.1"
gethostname = "1.0.0"
sysinfo = "0.33.1"
