[package]
name = "lib_db"
version = "0.1.0"
edition = "2021"

[dependencies]
sha256 = "1.5.0"
jwt-simple = "0.12.11"
sqlx = { version = "0.8.2", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "macros",
] }
tokio = { version = "1.40.0", features = ["full"] }
log = "0.4.22"
# once_cell = "1.20.2"
