[package]
name = "tcp"
version = "0.1.0"
edition = "2021"

[dependencies]
mio = { version = "1.0.3", features = ["net"] }
rustls = "=0.23.20"
tokio = "1.40.0"
multicast = { path = "../multicast/" }
common_lib = { path = "../../common_lib/" }
lib_start = { path = "../../lib_start/" }
lib_db = { path = "../../lib_db/" }
log = "0.4.22"
rcgen = "=0.13.1"
webpki-roots = "0.26.7"
