[package]
name = "tcp_test"
version = "0.1.0"
edition = "2021"

[dependencies]
rustls = "0.23.12"
#pki-types = { package = "rustls-pki-types", version = "1" }
#webpki = { package = "rustls-webpki", version = "0.102", features = ["alloc"], default-features = false }

[dependencies.tokio]
version = "1.4.0"
default-features = false
features = ["full"]

[dev-dependencies]
env_logger = "0.10" # 0.11 requires 1.71 MSRV even as a dev-dep (due to manifest features)
rcgen = { version = "0.13", features = ["aws_lc_rs"] }
webpki-roots = "0.26"
rustls-pemfile = "2.1.3"
#
#[features]
#default = ["std"]
#std = ["hpke-rs/std", "hpke-rs-crypto/std", "pkcs8/std", "rustls/std"]
